[package]
name = "console"
version = "0.1.0"
authors = ["Leon Hartley <lhartley97@gmail.com>"]

[dependencies]
clap = "2.32.0"
config = "0.9"
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
log = "0.4.6"
env_logger = "0.6.0"
chrono = "0.4.6"
actix = "0.7"
mysql = "15.0.0"
futures = "0.1"
conv = "0.3.3"

server = { path = "../server" }
db = { path = "../db" }
model = { path = "../model" }
game = { path = "../game" }
