[package]
name = "server"
version = "0.1.0"
authors = ["Leon Hartley <lhartley97@gmail.com>"]

[dependencies]
rand = "*"
bytes = "0.4"
byteorder = "1.1"
futures = "0.1"
tokio-io = "0.1"
tokio-tcp = "0.1"
tokio-codec = "0.1"
env_logger = "*"

serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"

actix = "0.7"
actix-web = "0.7"

model = { path = "../model"}
protocol = { path = "../protocol"}